@@ -2205,6 +2205,36 @@ SCIP_RETCODE SCIPconshdlrInitpre(
       }
    }
 
+   /* after a restart the LP is empty but the initial constraints are not included in the initialconss array anymore;
+    * we have to put them back into this array in order to obtain the correct initial root relaxation
+    */
+   if( stat->nruns >= 2 )
+   {
+      int c;
+
+      for( c = 0; c < conshdlr->nconss; ++c )
+      {
+         if( !conshdlr->conss[c]->deleted && conshdlr->conss[c]->initial && conshdlr->conss[c]->initconsspos == -1 )
+         {
+            SCIP_CALL( conshdlrAddInitcons(conshdlr, set, conshdlr->conss[c]) );
+         }
+      }
+   }
+
+#ifndef NDEBUG
+   /* check if all initial constraints are included in the initconss array */
+   {
+      int c;
+
+      for( c = 0; c < conshdlr->nconss; ++c )
+      {
+         assert(conshdlr->conss[c]->deleted || conshdlr->conss[c]->initial == (conshdlr->conss[c]->initconsspos >= 0));
+         assert(conshdlr->conss[c]->deleted || !conshdlr->conss[c]->initial
+            || conshdlr->initconss[conshdlr->conss[c]->initconsspos] == conshdlr->conss[c]);
+      }
+   }
+#endif
+
    return SCIP_OKAY;
 }
 
@@ -2288,36 +2318,6 @@ SCIP_RETCODE SCIPconshdlrInitsol(
       /* perform the cached constraint updates */
       SCIP_CALL( conshdlrForceUpdates(conshdlr, blkmem, set, stat) );
    }
-
-   /* after a restart the LP is empty but the initial constraints are not included in the initialconss array anymore;
-    * we have to put them back into this array in order to obtain the correct initial root relaxation
-    */
-   if( stat->nruns >= 2 )
-   {
-      int c;
-
-      for( c = 0; c < conshdlr->nconss; ++c )
-      {
-         if( !conshdlr->conss[c]->deleted && conshdlr->conss[c]->initial && conshdlr->conss[c]->initconsspos == -1 )
-         {
-            SCIP_CALL( conshdlrAddInitcons(conshdlr, set, conshdlr->conss[c]) );
-         }
-      }
-   }
-
-#ifndef NDEBUG
-   /* check if all initial constraints are included in the initconss array */
-   {
-      int c;
-
-      for( c = 0; c < conshdlr->nconss; ++c )
-      {
-         assert(conshdlr->conss[c]->deleted || conshdlr->conss[c]->initial == (conshdlr->conss[c]->initconsspos >= 0));
-         assert(conshdlr->conss[c]->deleted || !conshdlr->conss[c]->initial
-            || conshdlr->initconss[conshdlr->conss[c]->initconsspos] == conshdlr->conss[c]);
-      }
-   }
-#endif
 
    return SCIP_OKAY;
 }
